--- a/Test02/Views/KeToan/DSDaiLy.cshtml
+++ b/Test02/Views/KeToan/DSDaiLy.cshtml
@@ -22,7 +22,7 @@
         </script>
 
     }
-    if (TempData["xoacn"] != null)
+    @*if (TempData["xoacn"] != null)
     {
         <script>
             swal({
@@ -45,7 +45,7 @@
 
         </script>
 
-    }
+    }*@
 }
 
 <div class="row">
@@ -67,11 +67,12 @@
                         <table class="table table-hover table-bordered js-copytextarea" cellpadding="0" cellspacing="0" border="0" id="sampleTable" role="grid">
                             @*//Phần render từng dòng trong C#*@
                             <thead>
-                                <tr role="row" >
+                                <tr role="row">
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 50px;">Mã đại lý</th>
                                     <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 150px;">Tên đại lý</th>
                                     <th class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 160px;">Loại đại lý</th>
                                     <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Tổng công nợ</th>
+                                    <th width="300" class="sorting" tabindex="0" aria-controls="sampleTable" style="width: 100px;">Trạng thái</th>
 
                                     <th width="100" class="sorting" tabindex="0" style="width: 100px;">Chức năng</th>
                                 </tr>
@@ -91,7 +92,7 @@
                                         <td>
                                             @{var tenldk = database.LoaiDLs.Find(item.MaLoaiDL);
                                             }
-                                            @Html.DisplayFor(modelItem => tenldk.TenDaiLy)
+                                            @Html.DisplayFor(modelItem => tenldk.TenDaiLy) - @Html.DisplayFor(modelItem =>item.MaLoaiDL)
                                         </td>
 
                                         <td>
@@ -102,8 +103,6 @@
                                                 foreach (var cn in congno)
                                                 {
                                                     tongno += (double)cn.TienNo;
-
-
                                                 }
                                                 sophieuno = congno.Count();
                                                 var tiencongnno = string.Format("{0:0,0 vnđ}", tongno);
@@ -120,8 +119,40 @@
                                             int tongdonhang = 0;
                                             var donhangdl = database.DonHangs.Where(dh => dh.MaDL == item.MaDL && dh.TinhTrangThanhToan == "Chưa thanh toán" && dh.TrangThai == "Đã xét duyệt");
                                             tongdonhang = donhangdl.Count();
+                                            double maxcn = 0;
 
+
+                                            if (item.MaLoaiDL == "LDL01")
+                                            {
+                                                maxcn = 500000000;
+                                            }
+                                            else if (item.MaLoaiDL == "LDL02")
+                                            {
+                                                maxcn = 250000000;
+                                            }
+                                            else
+                                            {
+                                                maxcn = 100000000;
+
+                                            }
+                                            double dangercn = maxcn - (maxcn * 0.1);
+                                            double warningcn = maxcn - (maxcn * 0.3);
                                         }
+                                    <td>
+
+                                        @if (tongno > dangercn)
+                                        {
+                                            <span class="badge badge-danger">Nguy cơ</span>
+                                        }
+                                        else if (tongno >= warningcn && tongno <= dangercn)
+                                        {
+                                            <span class="badge badge-warning">Cảnh báo</span>
+                                        } 
+                                        else
+                                        {
+                                                <span class="badge badge-success">Bình thường</span>
+                                        }
+                                    </td>
                                     <td style="text-align:center">
 
                                         <a href="~/KeToan/CongnoDL/@item.MaDL" class="btn btn-outline-primary btn-sm notification" ata-toggle="tooltip" title="Danh sách đơn hàng">
