--- a/Test02/Views/KeToan/XuatHDBH.cshtml
+++ b/Test02/Views/KeToan/XuatHDBH.cshtml
@@ -8,6 +8,9 @@
     QuanLyDLEntities2 db = new QuanLyDLEntities2();
     List<ChiTietDonHang> ct = db.ChiTietDonHangs.ToList();
 }
+
+<link href="~/Content/KeToan/StyleKeToan.css" rel="stylesheet" />
+
 <div class="container-sm">
     <div class="row">
         <div class="col-md-12">
@@ -103,42 +106,105 @@
     </div>
     <div class="row" style="padding-left:10px" id="btnin">
         <div class="col-sm-2">
+            <a class="btn btn-warning btn-sm " data-toggle="modal" data-target="#myModal" >
+                Cập thông tin đơn hàng
+            </a>
+        </div>
+        <div class="col-sm-2">
             <a class="btn btn-delete btn-sm " title="In" onclick="printDiv('printMe')">
                 <i class="fas fa-print"></i> In dữ liệu
             </a>
         </div>
         <div class="col-sm-2">
 
-            @if (Model.TinhTrangThanhToan == "Chưa thanh toán")
+            @if (Model.TinhTrangGH == "Chờ giao")
             {
                 <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonHang">Quay lại</a>
             }
-            else if (Model.TinhTrangThanhToan == "Đang nợ")
-            {
-                <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonNo">Quay lại</a>
-            }
             else
             {
-                <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonThanhToan">Quay lại</a>
+                <a class="btn btn-danger btn-sm" type="button" title="Quay lại " href="~/KeToan/QLDonDaGiao">Quay lại</a>
             }
-
-
 
         </div>
 
     </div>
 </div>
 
+<!-- The Modal -->
+<div class="modal" id="myModal">
+    <div class="modal-dialog">
+        <div class="modal-content">
+            @using (Html.BeginForm("ChinhsuaHD", "KeToan", FormMethod.Post, new { enctype = "multipart/form-data" }))
+            {
+                @Html.AntiForgeryToken()
+                @Html.HiddenFor(model => model.MaDH)
+                @Html.HiddenFor(model => model.MaDL)
+                @Html.HiddenFor(model => model.MaNVLap)
+                @Html.HiddenFor(model => model.NgayLap)
+                @Html.HiddenFor(model => model.TrangThai)
+                @Html.HiddenFor(model => model.DiemGiao)
+                @Html.HiddenFor(model => model.TongTien)
+                @Html.HiddenFor(model => model.PhieuXuatKho)
+                @Html.HiddenFor(model => model.TinhTrangGH)
+                @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+                <!-- Modal body -->
+                <div class="modal-body">
+                    <p class="modal-name">CẬP NHẬT ĐƠN HÀNG @Model.MaDH</p>
+                    <div class="confirmation-dh border" style="padding:20px 20px; margin:0 10px;">
+                        <div class="row">
+                            <div class="form-group col-sm-12">
+                                <strong>Tình trạng thanh toán</strong>
+                                <div class="col-md-10">
+                                    <select class="form-control" id="TinhTrangThanhToan" name="TinhTrangThanhToan">
+                                        <option selected="@Model.TinhTrangThanhToan">@Model.TinhTrangThanhToan</option>
+                                        <option>Đã thanh toán</option>
+                                        <option>Chưa thanh toán</option>
+                                        <option>Đang nợ</option>
+                                    </select>
+                                    @Html.ValidationMessageFor(model => model.TinhTrangThanhToan, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                            <div class="form-group col-sm-12">
+                                <strong>Xác nhận xuất phiếu</strong>
+                                <div class="col-md-10">
+                                    <select class="form-control" id="XuatHoaDon" name="XuatHoaDon">
+                                        <option selected="@Model.XuatHoaDon">@Model.XuatHoaDon</option>
+                                        <option value="true">True</option>
+                                        <option value="false">False</option>
+
+                                    </select>
+                                    @Html.ValidationMessageFor(model => model.XuatHoaDon, "", new { @class = "text-danger" })
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+                <!-- Modal footer -->
+                <div class="modal-footer" style="padding-top:10px;">
+                    <a class="btn btn-danger" data-dismiss="modal">Close</a>
+                    @*<a class="btn btn-success" href="/KeToan/TaoCongno/@daily.MaDL">Xuất công nợ</a>*@
+                    <input type="submit" value="Lập phiếu công nợ" class="btn btn-success" />
+                </div>
+            }
+        </div>
+    </div>
+</div>
 
 <script>
     function printDiv(divName) {
-      
+
 
         var printContents = document.getElementById(divName).innerHTML;
         var originalContents = document.body.innerHTML;
 
         document.getElementById("btnin").style.display = "none";
-        
+
 
         document.body.innerHTML = printContents;
 
